Config + ULTRAKILL + bow wobble